--- a/foundry.toml
+++ b/foundry.toml
@@ -3,8 +3,11 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
-remappings= [
-    "@openzeppelin=lib/openzeppelin-contracts/contracts"
+remappings=[
+    "@openzeppelin=lib/openzeppelin-contracts/contracts",
+    "forge-std/=lib/forge-std/src/"
 ]
+
+fs_permissions = [{ access = "read", path = "./broadcast" }, {access = "read", path = "./Images/"}]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
